--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.9.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.2.5.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.tcc.cee</groupId>
-	<artifactId>tcc</artifactId>
+	<artifactId>cee-tcc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>tcc</name>
+	<name>cee</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -49,14 +48,13 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+		
+		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -75,11 +73,17 @@
 			<version>3.4.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>nz.net.ultraq.thymeleaf</groupId>
-			<artifactId>thymeleaf-layout-dialect</artifactId>
-			<version>2.0.5</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>nz.net.ultraq.thymeleaf</groupId> -->
+<!-- 			<artifactId>thymeleaf-layout-dialect</artifactId> -->
+<!-- 			<version>2.0.5</version> -->
+<!-- 		</dependency> -->
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.thymeleaf.extras</groupId> -->
+<!-- 			<artifactId>thymeleaf-extras-java8time</artifactId> -->
+<!-- 			<version>3.0.1.RELEASE</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
@@ -100,8 +104,19 @@
 			<artifactId>barcode4j</artifactId>
 			<version>2.0</version>
 		</dependency>
-
-
+		
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<build>
